--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <name>Spark Training</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <spark.version>1.6.1</spark.version>
+    <spark.version>2.1.0</spark.version>
     <jedis.version>2.8.2</jedis.version>
     <fastjson.version>1.2.14</fastjson.version>
     <jetty.version>9.2.5.v20141112</jetty.version>
@@ -36,7 +36,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming-kafka_2.10</artifactId>
+      <artifactId>spark-streaming-kafka-0-8_2.10</artifactId>
       <version>${spark.version}</version>
     </dependency>
     <dependency>
@@ -97,7 +97,6 @@
       <version>${container.version}</version>
     </dependency>
 
-
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-compiler</artifactId>
@@ -123,7 +122,6 @@
       <artifactId>scalap</artifactId>
       <version>${scala.version}</version>
     </dependency>
-
   </dependencies>
 
   <build>
