--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,15 @@
     <scala.version>2.10.4</scala.version>
     <java.version>1.7</java.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>nexus-aliyun</id>
+      <name>Nexus aliyun</name>
+      <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <!-- put javax.ws.rs as the first dependency, it is important!!! -->
     <dependency>
